syntax = "proto3";
package com.cinema;
option java_multiple_files = true;

enum Genre {
  G = 0;
  PG = 1;
  PG13 = 2;
  R = 3;
  NC17 = 4;
}

message FilmResponse {
  string id = 1;
  string name = 2;
  string director = 3;
  int32 year = 4;
  Genre genre = 5;
}

message FilmRequest {
  string name = 1;
  string director = 2;
  int32 year = 3;
  Genre genre = 4;
}

message HallResponse {
  string id = 1;
  string name = 2;
  int32 linesNum = 3;
  int32 seatsNum = 4;
}

message HallRequest {
  string name = 2;
  int32 linesNum = 3;
  int32 seatsNum = 4;
}

message SeanceRequest {
  string seanceDate = 1;
  double price = 2;
  FilmRequest film = 3;
  HallRequest hall = 4;
}

message SeanceResponse {
  string id = 1;
  string seanceDate = 2;
  double price = 3;
  string filmId = 4;
  string hallId = 5;
}

message VisitorResponse {
  string id = 1;
  string name = 2;
  double money = 3;
  int32 age = 4;
}

message VisitorRequest {
  string name = 2;
  double money = 3;
  int32 age = 4;
}

enum Position {
  OWNER = 0;
  TICKETSELLER = 1;
  MANAGER = 2;
}

message WorkerResponse {
  string id = 1;
  string name = 2;
  string surname = 3;
  int64 salary = 4;
  Position position = 5;
}

message WorkerRequest {
  string name = 1;
  string surname = 2;
  int64 salary = 3;
  Position position = 4;
}

service CinemaService {
  rpc addFilm(FilmRequest) returns (FilmResponse);
  rpc addHall(HallRequest) returns (HallResponse);
  rpc addSeance(SeanceRequest) returns (SeanceResponse);
  rpc addVisitor(VisitorRequest) returns (VisitorResponse);
  rpc addWorker(WorkerRequest) returns (WorkerResponse);
}
